scroll-fixed z-index;

--- a/htdocs/layout/css/csrdelft.css
+++ b/htdocs/layout/css/csrdelft.css
@@ -20,11 +20,13 @@ body{
 }
 #mainright{
 	padding: 10px 0;
+	background-color: #fff;
 }
 
 .scroll-fixed {
 	position: fixed;
 	top: 0;
+	z-index: -1;
 }
 
 h1{
